--- a/Movies/Movies/Base.lproj/Main.storyboard
+++ b/Movies/Movies/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Фильмы-->
+        <!--Films-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
@@ -30,7 +30,7 @@
                             <constraint firstItem="HXM-Aw-7JL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xKH-OB-ev0"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Фильмы" id="kCJ-A3-ESh"/>
+                    <navigationItem key="navigationItem" title="Films" id="kCJ-A3-ESh"/>
                     <connections>
                         <outlet property="tableView" destination="HXM-Aw-7JL" id="NSU-95-B5p"/>
                         <segue destination="Q1P-YJ-6FG" kind="show" identifier="toDetailVC" id="FDr-jd-LTp"/>
@@ -40,7 +40,7 @@
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="105.80357142857143"/>
         </scene>
-        <!--DetailVC-->
+        <!--Description-->
         <scene sceneID="eXl-cW-2dd">
             <objects>
                 <viewController id="Q1P-YJ-6FG" customClass="DetailVC" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
@@ -52,19 +52,19 @@
                                 <rect key="frame" x="20" y="88" width="374" height="808"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5j-uW-fjf">
-                                        <rect key="frame" x="166.5" y="0.0" width="41.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="146" y="0.0" width="82.5" height="42"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4bg-PK-id3">
-                                        <rect key="frame" x="67" y="45.5" width="240" height="278"/>
+                                        <rect key="frame" x="67" y="67" width="240" height="278"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="278" id="D15-7G-dwu"/>
                                         </constraints>
                                     </imageView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Zxw-dc-idp">
-                                        <rect key="frame" x="0.0" y="348.5" width="374" height="459.5"/>
+                                        <rect key="frame" x="0.0" y="370" width="374" height="438"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" systemColor="labelColor"/>
@@ -87,7 +87,9 @@
                             <constraint firstItem="7ke-ao-TGC" firstAttribute="bottom" secondItem="NJL-J3-9Up" secondAttribute="bottom" constant="-34" id="txu-rU-Jv9"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="OP4-H3-P8c"/>
+                    <navigationItem key="navigationItem" title="Description" id="OP4-H3-P8c">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="y9V-vr-d02"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="descriptionTextView" destination="Zxw-dc-idp" id="sqW-gt-7M3"/>
                         <outlet property="nameLabel" destination="z5j-uW-fjf" id="FWi-X0-4PP"/>
