--- a/Movies/Movies/View/MovieCell.xib
+++ b/Movies/Movies/View/MovieCell.xib
@@ -17,29 +17,26 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uIW-qu-y6c">
-                        <rect key="frame" x="20" y="10" width="121" height="146"/>
+                        <rect key="frame" x="10" y="10" width="121" height="146"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="121" id="9xk-Jq-agc"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5vD-IS-aO6">
-                        <rect key="frame" x="183" y="10" width="276" height="146"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="5vD-IS-aO6">
+                        <rect key="frame" x="151" y="10" width="308" height="146"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJI-KS-4Tt">
-                                <rect key="frame" x="0.0" y="0.0" width="43" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="FJI-KS-4Tt" secondAttribute="height" multiplier="41:20" id="Tz4-1V-bdt"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJI-KS-4Tt">
+                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="12.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNm-qd-CbA">
-                                <rect key="frame" x="0.0" y="31" width="276" height="115"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNm-qd-CbA">
+                                <rect key="frame" x="0.0" y="17.5" width="308" height="128.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="CNm-qd-CbA" secondAttribute="height" multiplier="12:5" id="4ue-Fr-byR"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -47,7 +44,6 @@
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="CNm-qd-CbA" secondAttribute="bottom" id="C2x-Us-kHa"/>
                             <constraint firstAttribute="trailing" secondItem="CNm-qd-CbA" secondAttribute="trailing" id="EUW-XO-Ags"/>
-                            <constraint firstItem="CNm-qd-CbA" firstAttribute="top" secondItem="FJI-KS-4Tt" secondAttribute="bottom" constant="10" id="xtF-KG-i0b"/>
                             <constraint firstItem="CNm-qd-CbA" firstAttribute="leading" secondItem="5vD-IS-aO6" secondAttribute="leading" id="zml-Ub-5zG"/>
                         </constraints>
                     </stackView>
@@ -57,9 +53,9 @@
                     <constraint firstAttribute="bottom" secondItem="uIW-qu-y6c" secondAttribute="bottom" constant="10" id="Cia-iE-lks"/>
                     <constraint firstItem="uIW-qu-y6c" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Gjm-OP-UHY"/>
                     <constraint firstAttribute="trailing" secondItem="5vD-IS-aO6" secondAttribute="trailing" constant="10" id="NMU-TM-huZ"/>
-                    <constraint firstItem="uIW-qu-y6c" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" symbolic="YES" id="m7A-ZX-xo9"/>
+                    <constraint firstItem="uIW-qu-y6c" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="m7A-ZX-xo9"/>
                     <constraint firstAttribute="bottom" secondItem="5vD-IS-aO6" secondAttribute="bottom" constant="10" id="tFz-ex-T03"/>
-                    <constraint firstItem="5vD-IS-aO6" firstAttribute="leading" secondItem="uIW-qu-y6c" secondAttribute="trailing" constant="42" id="w7j-UH-Qvl"/>
+                    <constraint firstItem="5vD-IS-aO6" firstAttribute="leading" secondItem="uIW-qu-y6c" secondAttribute="trailing" constant="20" id="w7j-UH-Qvl"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
