--- a/Movies/Movies/View/MovieCell.xib
+++ b/Movies/Movies/View/MovieCell.xib
@@ -31,7 +31,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNm-qd-CbA">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNm-qd-CbA">
                                 <rect key="frame" x="0.0" y="17.5" width="308" height="128.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="CNm-qd-CbA" secondAttribute="height" multiplier="12:5" id="4ue-Fr-byR"/>
