--- a/Movies/Movies/View/Xib files/MovieCell.xib
+++ b/Movies/Movies/View/Xib files/MovieCell.xib
@@ -23,19 +23,16 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="5vD-IS-aO6">
-                        <rect key="frame" x="151" y="10" width="308" height="146"/>
+                        <rect key="frame" x="151" y="10" width="308" height="106"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJI-KS-4Tt">
-                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="12.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNm-qd-CbA">
-                                <rect key="frame" x="0.0" y="17.5" width="308" height="128.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="CNm-qd-CbA" secondAttribute="height" multiplier="12:5" id="4ue-Fr-byR"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNm-qd-CbA">
+                                <rect key="frame" x="0.0" y="25.5" width="308" height="80.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -47,14 +44,26 @@
                             <constraint firstItem="CNm-qd-CbA" firstAttribute="leading" secondItem="5vD-IS-aO6" secondAttribute="leading" id="zml-Ub-5zG"/>
                         </constraints>
                     </stackView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aZQ-by-Fhe">
+                        <rect key="frame" x="151" y="126" width="17.5" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="Qme-zd-l7b"/>
+                        </constraints>
+                        <state key="normal" image="bookmark" catalog="system"/>
+                        <connections>
+                            <action selector="buttonLikeAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="pXq-8c-Og7"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="5vD-IS-aO6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="8nz-Rx-hdD"/>
                     <constraint firstAttribute="bottom" secondItem="uIW-qu-y6c" secondAttribute="bottom" constant="10" id="Cia-iE-lks"/>
                     <constraint firstItem="uIW-qu-y6c" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Gjm-OP-UHY"/>
                     <constraint firstAttribute="trailing" secondItem="5vD-IS-aO6" secondAttribute="trailing" constant="10" id="NMU-TM-huZ"/>
+                    <constraint firstAttribute="bottom" secondItem="aZQ-by-Fhe" secondAttribute="bottom" constant="10" id="OYp-Id-8Dt"/>
+                    <constraint firstItem="aZQ-by-Fhe" firstAttribute="top" secondItem="5vD-IS-aO6" secondAttribute="bottom" constant="10" id="c6D-p9-lw8"/>
                     <constraint firstItem="uIW-qu-y6c" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="m7A-ZX-xo9"/>
-                    <constraint firstAttribute="bottom" secondItem="5vD-IS-aO6" secondAttribute="bottom" constant="10" id="tFz-ex-T03"/>
+                    <constraint firstItem="aZQ-by-Fhe" firstAttribute="leading" secondItem="uIW-qu-y6c" secondAttribute="trailing" constant="20" id="rjT-Nq-f5S"/>
                     <constraint firstItem="5vD-IS-aO6" firstAttribute="leading" secondItem="uIW-qu-y6c" secondAttribute="trailing" constant="20" id="w7j-UH-Qvl"/>
                 </constraints>
             </tableViewCellContentView>
@@ -64,7 +73,10 @@
                 <outlet property="photoImageView" destination="uIW-qu-y6c" id="ZCh-hL-wva"/>
                 <outlet property="titleLabel" destination="FJI-KS-4Tt" id="A2n-FW-ToS"/>
             </connections>
-            <point key="canvasLocation" x="245.6521739130435" y="162.72321428571428"/>
+            <point key="canvasLocation" x="144" y="135"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="bookmark" catalog="system" width="112" height="128"/>
+    </resources>
 </document>
